# star-competency-app

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.alternative  backup.Dockerfile  backup.sh  docker-bake.hcl  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
scripts/: backup.py  restore.py
star_competency_app/: main.py
star_competency_app/ai/: claude_client.py  openai_client.py  prompt_agent.py
star_competency_app/auth/: azure_sso.py
star_competency_app/config/: logging_config.py  settings.py
star_competency_app/database/: db_manager.py  models.py  seed.py
star_competency_app/interfaces/web/: app.py
star_competency_app/interfaces/web/routes/: admin_routes.py  auth_routes.py  case_study_routes.py  gap_analysis_routes.py  star_routes.py
star_competency_app/interfaces/web/static/css/: styles.css
star_competency_app/interfaces/web/static/js/: main.js
star_competency_app/interfaces/web/templates/: base.html  dashboard.html  index.html
star_competency_app/interfaces/web/templates/admin/: competencies.html  user_activity.html  users.html
star_competency_app/interfaces/web/templates/auth/: login.html  profile.html
star_competency_app/interfaces/web/templates/case_study/: list.html  new.html  view.html
star_competency_app/interfaces/web/templates/errors/: 400.html  401.html  (+5 more)
star_competency_app/utils/: data_security.py  image_utils.py  rate_limit.py  security_logging.py  security_middleware.py  security_utils.py  text_utils.py  validation_utils.py
(+7 files in other folders)
